backend/k8s/kafka-producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-producer
  namespace: wallstreetbuddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-producer
  template:
    metadata:
      labels:
        app: kafka-producer
    spec:
      containers:
      - name: kafka-producer
        image: gcr.io/wallstreetbuddy/kafka-producer:latest
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-producer
  namespace: wallstreetbuddy
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kafka-producer
