backend/k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: wallstreetbuddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      enableServiceLinks: false
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.4.0
        ports:
        - containerPort: 29092
        - containerPort: 9092
        - containerPort: 9101
        resources:
          requests:
            cpu: 200m
            memory: 1Gi
          limits:
            cpu: 500m
            memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: wallstreetbuddy
spec:
  ports:
  - name: kafka-internal
    port: 29092
    targetPort: 29092
  - name: kafka-external
    port: 9092
    targetPort: 9092
  - name: jmx
    port: 9101
    targetPort: 9101
  selector:
    app: kafka
